test/libsolidity/syntaxTests/errors/error_reserved_name.sol
// TODO do we want to disallow this at all?
error Error(uint);
// ----
